collapsables, img preview, tel, mail fixed

--- a/src/scss/cards/_rellena.scss
+++ b/src/scss/cards/_rellena.scss
@@ -25,7 +25,7 @@
 
     &--chevron {
       justify-self: flex-end;
-      color: $color-font; 
+      color: $color-font;
     }
   }
 
@@ -90,6 +90,7 @@
 }
 
 .profile__preview {
+  background-image: url(https://placekitten.com/240/200);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
